[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "gyld-sdk"
version = "0.0.1"
dependencies = [
    'importlib-metadata; python_version>="3.8"',
]
[tool.setuptools]
package-dir = {"gyld.sdk" = "src"}
packages = [
    'gyld.sdk',
        'gyld.sdk.data',
        'gyld.sdk.logservice',
        'gyld.sdk.media',
        'gyld.sdk.utility',
        'gyld.sdk.services'
]
